--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <a href="#">Blog</a>
             <a href="#">Contact</a>
             </nav>
+            <img class="Big" src="img/jumbo.jpg"
         </header>
+
 
         <section class="top-content">
             <div class="text-container">
